[chromium] put WebTestProxy::scheduleComposite back in place https://bugs.webkit.org/show_bug.cgi?id=111146

Reviewed by Nico Weber.

The call was removed in http://trac.webkit.org/changeset/144398 because
DRT doesn't need it. However, content shell depends on this call.

* DumpRenderTree/chromium/TestRunner/public/WebTestProxy.h:
(WebTestRunner::WebTestProxy::scheduleComposite):

Canonical link: https://commits.webkit.org/129502@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144433 268f45cc-cd09-0410-ab3c-d52691b4dbfc